Changed buttons to anchor tags

--- a/index.html
+++ b/index.html
@@ -154,9 +154,7 @@
                                     <li>2 free PT sessions a month</li>
                                     <li>Access to any of our classes</li>
                                  </ul>
-                                 <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
-                                 £25
-                                 </button>
+                                 <a class="btn-info btn-lg anchor-button" href="sign-up.html">£25</a>
                               </div>
                            </div>
                         </div>
@@ -183,9 +181,7 @@
                                     <li>5 free PT sessions a month</li>
                                     <li>Access to any of our classes</li>
                                  </ul>
-                                 <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
-                                 £35
-                                 </button>
+                                 <a class="btn-info btn-lg anchor-button" href="sign-up.html">£35</a>
                               </div>
                            </div>
                         </div>
@@ -212,9 +208,7 @@
                                     <li>1 free PT sessions a month</li>
                                     <li>Access to any of our classes</li>
                                  </ul>
-                                 <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
-                                 £20
-                                 </button>
+                                 <a class="btn-info btn-lg anchor-button" href="sign-up.html">£20</a>
                               </div>
                            </div>
                         </div>
