--- a/locations.html
+++ b/locations.html
@@ -166,9 +166,7 @@
             </p>
          </div>
          <div class="joinbtn">
-            <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
-            JOIN
-            </button>
+            <a class="btn-info btn-lg anchor-button" href="sign-up.html">Join</a>
          </div>
       </section>
       <div class="top-btn">
