--- a/sign-up.html
+++ b/sign-up.html
@@ -100,9 +100,7 @@
                   <li>5 free PT sessions a month</li>
                   <li>Access to any of our classes</li>
                </ul>
-               <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
-               £35
-               </button>
+               <a class="btn-info btn-lg anchor-button" href="sign-up.html">£35</a>
             </div>
             <div class="boxed">
                <h1>Standard</h1>
@@ -112,9 +110,7 @@
                   <li>2 free PT sessions a month</li>
                   <li>Access to any of our classes</li>
                </ul>
-               <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
-               £25
-               </button>
+               <a class="btn-info btn-lg anchor-button" href="sign-up.html">£25</a>
             </div>
             <div class="boxed">
                <h1>Student</h1>
@@ -124,9 +120,7 @@
                   <li>1 free PT sessions a month</li>
                   <li>Access to any of our classes</li>
                </ul>
-               <button class="btn-info btn-lg" onclick="window.location.href='sign-up.html';">
-               £20
-               </button>
+               <a class="btn-info btn-lg anchor-button" href="sign-up.html">£20</a>
             </div>
          </div>
       </section>
